Overlapping article fix

--- a/article.css
+++ b/article.css
@@ -75,6 +75,13 @@ header{
 	padding: 1em;
 	box-shadow: 0 0 1em black;
 }
+
 #topArticle{
+	z-index: 2;
+}
+#middelArticle{
 	z-index: 1;
+}
+#bottomArticle{
+	z-index: -1;
 }
